maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:21: error: illegal start of simple expression
  }
  ^JediEscaper:36: error: ':' expected but ',' found.
def aMurSud(x,y):Boolean = {  // test mur au SUD
             ^JediEscaper:50: error: identifier expected but '}' found.
}
^